--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <style>
     * {
       margin: 0;
@@ -14,173 +13,275 @@
       box-sizing: border-box;
     }
 
+    html {
+      scroll-behavior: smooth;
+    }
+
     body {
       font-family: 'Inter', sans-serif;
       background: url('https://i.imgur.com/ss4LnZS.png') no-repeat center center fixed;
       background-size: cover;
-      height: 100vh;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
       color: #fff;
     }
 
-    .container {
-      text-align: center;
-      background: rgba(0, 0, 0, 0.4);
-      padding: 45px 35px;
-      border-radius: 25px;
+    header {
+      width: 100%;
+      padding: 20px;
+      background: rgba(0, 0, 0, 0.6);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .logo-title {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 22px;
+      color: #00ffff;
+    }
+
+    .menu-toggle {
+      font-size: 28px;
+      color: #00ffff;
+      background: none;
+      border: none;
+      cursor: pointer;
+      display: none;
+    }
+
+    nav {
+      display: flex;
+      gap: 25px;
+    }
+
+    nav a {
+      color: #00ffff;
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    nav a:hover {
+      color: #fff;
+    }
+
+    @media (max-width: 768px) {
+      .menu-toggle {
+        display: block;
+      }
+
+      nav {
+        position: absolute;
+        top: 70px;
+        right: 20px;
+        background: rgba(0, 0, 0, 0.9);
+        flex-direction: column;
+        padding: 20px;
+        border-radius: 12px;
+        display: none;
+      }
+
+      nav.open {
+        display: flex;
+      }
+    }
+
+    section {
+      min-height: 100vh;
+      padding: 100px 20px 60px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .container, .section-content {
+      background: rgba(0, 0, 0, 0.5);
       backdrop-filter: blur(12px);
-      box-shadow: 0 0 40px rgba(0, 255, 255, 0.2);
-      max-width: 720px;
-      animation: fadeIn 1s ease-out;
-      border: 1px solid rgba(0, 255, 255, 0.3);
+      padding: 40px;
+      border-radius: 20px;
+      max-width: 800px;
+      text-align: center;
     }
 
     .logo {
-      width: 150px;
-      height: 150px;
+      width: 120px;
+      height: 120px;
       border-radius: 50%;
       border: 4px solid #00ffff;
-      box-shadow: 0 0 25px rgba(0, 255, 255, 0.5);
-      transition: transform 0.4s ease, box-shadow 0.4s ease;
-    }
-
-    .logo:hover {
-      transform: rotate(6deg) scale(1.07);
-      box-shadow: 0 0 40px #00ffff;
+      margin-bottom: 20px;
     }
 
     .name {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 32px;
-      margin-top: 22px;
+      font-size: 28px;
       color: #00ffff;
-      text-shadow: 0 0 10px #00ffff;
-      letter-spacing: 1.2px;
+      font-family: 'Orbitron', sans-serif;
     }
 
     .description, .welcome {
-      margin-top: 18px;
+      margin-top: 15px;
       font-size: 18px;
-      line-height: 1.7;
       color: #e0f7fa;
-      text-shadow: 1px 1px 2px #000;
-    }
-
-    .hexa-title {
-      margin-top: 16px;
-      font-size: 20px;
-      color: #80deea;
-      font-weight: 600;
-      text-shadow: 0 0 8px #00ffff;
     }
 
     .buttons {
-      margin-top: 32px;
+      margin-top: 30px;
       display: flex;
-      gap: 20px;
       flex-wrap: wrap;
+      gap: 15px;
       justify-content: center;
     }
 
     .buttons a {
-      text-decoration: none;
+      background: #00ffff;
       color: #000;
-      background: linear-gradient(135deg, #00fff0, #00bcd4);
-      padding: 14px 28px;
-      border-radius: 30px;
+      padding: 12px 20px;
+      border-radius: 25px;
+      text-decoration: none;
       font-weight: 600;
-      font-size: 16px;
-      border: none;
-      position: relative;
-      overflow: hidden;
-      box-shadow: 0 0 12px #00fff7, 0 0 20px rgba(0, 255, 255, 0.5);
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      transition: all 0.3s ease;
-    }
-
-    .buttons a::after {
-      content: '';
-      position: absolute;
-      top: -50%;
-      left: -50%;
-      width: 200%;
-      height: 200%;
-      background: radial-gradient(circle, rgba(255,255,255,0.15) 10%, transparent 60%);
-      transform: scale(0);
-      transition: transform 0.5s ease;
-      z-index: 0;
-    }
-
-    .buttons a:hover::after {
-      transform: scale(1);
+      transition: 0.3s;
     }
 
     .buttons a:hover {
-      transform: translateY(-4px) scale(1.05);
-      background: linear-gradient(135deg, #ffffff, #a7faff);
+      background: #fff;
+    }
+
+    .section-title {
+      font-size: 28px;
+      color: #00ffff;
+      margin-bottom: 20px;
+    }
+
+    .projects-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+
+    .project-card {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid #00ffff30;
+      border-radius: 15px;
+      padding: 20px;
+      text-align: left;
+      transition: transform 0.3s ease;
+    }
+
+    .project-card:hover {
+      transform: scale(1.05);
+      background: rgba(0, 255, 255, 0.1);
+    }
+
+    .project-card h3 {
+      color: #00ffff;
+      margin-bottom: 10px;
+    }
+
+    .project-card p {
+      color: #e0f7fa;
+    }
+
+    form input,
+    form textarea {
+      padding: 12px;
+      border-radius: 10px;
+      border: none;
+      font-size: 16px;
+    }
+
+    form button {
+      background: #00ffff;
       color: #000;
-      box-shadow: 0 0 25px #00ffff, 0 0 40px rgba(0, 255, 255, 0.5);
+      padding: 12px;
+      border-radius: 10px;
+      border: none;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
     }
 
-    .buttons a i {
-      z-index: 1;
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(30px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+    form button:hover {
+      background: #fff;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <img src="https://yt3.googleusercontent.com/D0Q_oZbMcB9013-eUMeJZS4E0RVViqzOuAYzMLvPOF05XF7otGPgbVBAvxhi1EfR4zE7YzmFDA=s160-c-k-c0x00ffffff-no-rj" alt="Logo" class="logo" />
 
-    <div class="name">㳠米鸭 (taimiyaxeditz)</div>
+  <header>
+    <div class="logo-title">㳠米鸭</div>
+    <button class="menu-toggle" onclick="toggleMenu()"><i class="fas fa-ellipsis-v"></i></button>
+    <nav id="nav-menu">
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-    <div class="description">
-      I'm a coder with over 3 years of experience, now working as a full-stack developer. Always exploring new technologies and pushing boundaries.
+  <section id="home">
+    <div class="container">
+      <img class="logo" src="https://yt3.googleusercontent.com/D0Q_oZbMcB9013-eUMeJZS4E0RVViqzOuAYzMLvPOF05XF7otGPgbVBAvxhi1EfR4zE7YzmFDA=s160-c-k-c0x00ffffff-no-rj" alt="Logo" />
+      <div class="name">taimiyaxeditz</div>
+      <div class="description">I'm a coder with over 3 years of experience, now working as a full-stack developer.</div>
+      <div class="welcome">I'm passionate about coding, editing, and building across the digital universe. Let's innovate together!</div>
+      <div class="buttons">
+        <a href="https://discord.com/user/1331632669880221708"><i class="fab fa-discord"></i> Discord</a>
+        <a href="https://youtube.com/@taimiyaxeditz?si=kwh2hmAV_XRRhXOf"><i class="fab fa-youtube"></i> YouTube</a>
+        <a href="https://github.com/Taimiya-Creator"><i class="fab fa-github"></i> GitHub</a>
+        <a href="https://discord.gg/CKT4AhYfBs"><i class="fab fa-discord"></i> Hexa Host</a>
+      </div>
     </div>
+  </section>
 
-    <div class="welcome">
-      Welcome to my digital space! I'm passionate about coding, editing, and building across the digital universe. Let's innovate together!
+  <section id="about">
+    <div class="section-content">
+      <h2 class="section-title">About Me</h2>
+      <p>I'm a coder with over 3 years of experience, now working as a full-stack developer. Always exploring new technologies and pushing boundaries.</p>
+      <p>CEO of Hexa Host. I love building tools and digital experiences that push the web forward.</p>
     </div>
+  </section>
 
-    <div class="hexa-title">ᴄᴇᴏ ᴏғ ʜᴇxᴀ ʜᴏsᴛ</div>
-
-    <div class="buttons">
-      <a href="https://discord.com/user/1331632669880221708" target="_blank"><i class="fab fa-discord"></i> Discord</a>
-      <a href="https://youtube.com/@taimiyaxeditz?si=kwh2hmAV_XRRhXOf" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
-      <a href="https://github.com/Taimiya-Creator" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-      <a href="https://discord.gg/CKT4AhYfBs" target="_blank"><i class="fab fa-discord"></i> Hexa Host</a>
+  <section id="projects">
+    <div class="section-content">
+      <h2 class="section-title">Projects</h2>
+      <div class="projects-grid">
+        <div class="project-card">
+          <h3>Flex UI Kit</h3>
+          <p>A responsive UI component kit to quickly build beautiful web apps.</p>
+        </div>
+        <div class="project-card">
+          <h3>Hexa Host Panel</h3>
+          <p>A custom web hosting dashboard built from scratch using Node.js and React.</p>
+        </div>
+        <div class="project-card">
+          <h3>Anime Stream API</h3>
+          <p>Backend API to fetch anime data with streaming support, used in a custom player.</p>
+        </div>
+        <div class="project-card">
+          <h3>Glitch Anim Effects</h3>
+          <p>Micro-library that adds neon glitch transitions to text and buttons.</p>
+        </div>
+      </div>
     </div>
-  </div>
+  </section>
+
+  <section id="contact">
+    <div class="section-content">
+      <h2 class="section-title">Contact Me</h2>
+      <form action="mailto:your-email@example.com" method="POST" enctype="text/plain" style="margin-top: 20px;">
+        <div style="display: flex; flex-direction: column; gap: 15px; max-width: 500px; margin: auto;">
+          <input type="text" name="name" placeholder="Your Name" required />
+          <input type="email" name="email" placeholder="Your Email" required />
+          <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+          <button type="submit">Send Message</button>
+        </div>
+      </form>
+    </div>
+  </section>
 
   <script>
-    gsap.from(".logo", { duration: 1, opacity: 100, scale: 0.8, ease: "back.out(1.7)" });
-    gsap.from(".name", { duration: 1.2, opacity: 100, y: -30, delay: 0.3 });
-    gsap.from(".description", { duration: 1.2, opacity: 100, x: -50, delay: 0.6 });
-    gsap.from(".welcome", { duration: 1.2, opacity: 100, x: 50, delay: 0.9 });
-    gsap.from(".hexa-title", { duration: 1.2, opacity: 100, y: 20, delay: 1 });
-    gsap.from(".buttons a", {
-      duration: 0.6,
-      opacity: 100,
-      y: 20,
-      stagger: 0.2,
-      delay: 1.2,
-      ease: "power2.out"
-    });
+    function toggleMenu() {
+      const menu = document.getElementById("nav-menu");
+      menu.classList.toggle("open");
+    }
   </script>
+
 </body>
 </html>
