--- a/index.html
+++ b/index.html
@@ -7,16 +7,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    html {
-      scroll-behavior: smooth;
-    }
-
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html { scroll-behavior: smooth; }
     body {
       font-family: 'Inter', sans-serif;
       background: url('https://i.imgur.com/ss4LnZS.png') no-repeat center center fixed;
@@ -59,15 +51,10 @@
       font-weight: 600;
     }
 
-    nav a:hover {
-      color: #fff;
-    }
+    nav a:hover { color: #fff; }
 
     @media (max-width: 768px) {
-      .menu-toggle {
-        display: block;
-      }
-
+      .menu-toggle { display: block; }
       nav {
         position: absolute;
         top: 70px;
@@ -78,10 +65,7 @@
         border-radius: 12px;
         display: none;
       }
-
-      nav.open {
-        display: flex;
-      }
+      nav.open { display: flex; }
     }
 
     section {
@@ -139,9 +123,7 @@
       transition: 0.3s;
     }
 
-    .buttons a:hover {
-      background: #fff;
-    }
+    .buttons a:hover { background: #fff; }
 
     .section-title {
       font-size: 28px;
@@ -178,8 +160,7 @@
       color: #e0f7fa;
     }
 
-    form input,
-    form textarea {
+    form input, form textarea {
       padding: 12px;
       border-radius: 10px;
       border: none;
@@ -197,9 +178,7 @@
       transition: 0.3s;
     }
 
-    form button:hover {
-      background: #fff;
-    }
+    form button:hover { background: #fff; }
   </style>
 </head>
 <body>
@@ -217,7 +196,7 @@
 
   <section id="home">
     <div class="container">
-      <img class="logo" src="https://yt3.googleusercontent.com/D0Q_oZbMcB9013-eUMeJZS4E0RVViqzOuAYzMLvPOF05XF7otGPgbVBAvxhi1EfR4zE7YzmFDA=s160-c-k-c0x00ffffff-no-rj" alt="Logo" />
+      <img class="logo" src="https://yt3.googleusercontent.com/cKZ5TVEe-yXfQ2CeqI5UoHTUGKTcKTg2g0GcKA01UXA9hLHQKjvEpt9mvwGwUHgj3TefugfpPfw=s160-c-k-c0x00ffffff-no-rj" alt="Logo" />
       <div class="name">taimiyaxeditz</div>
       <div class="description">I'm a coder with over 3 years of experience, now working as a full-stack developer.</div>
       <div class="welcome">I'm passionate about coding, editing, and building across the digital universe. Let's innovate together!</div>
