--- a/index.html
+++ b/index.html
@@ -2,218 +2,236 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>㳠米鸭 | Taimiyaxeditz</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>㳠米鸭 | Taimiyaxeditz</title>
+  <link rel="icon" href="https://yt3.googleusercontent.com/rgW6HKz1xBR3c5UOjbKnb_Nkj1ZROqmoLbI_yrMpoWmgy7hiNSR-0kC2ZxLZN853BjHcWyBhHAk=s160-c-k-c0x00ffffff-no-rj" />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    html { scroll-behavior: smooth; }
-    body {
+    :root {
+      --neon: #00ffff;
+      --light: #e0f7fa;
+      --bg: #000;
+      --blur: rgba(0, 0, 0, 0.5);
+    }
+    [data-theme="light"] {
+      --neon: #ff00ff;
+      --light: #222;
+      --bg: #fff;
+      --blur: rgba(255, 255, 255, 0.4);
+    }
+    * {
+      margin: 0; padding: 0; box-sizing: border-box;
+    }
+    html, body {
       font-family: 'Inter', sans-serif;
-      background: url('https://i.imgur.com/ss4LnZS.png') no-repeat center center fixed;
-      background-size: cover;
-      color: #fff;
+      background: var(--bg);
+      color: var(--light);
+      overflow-x: hidden;
     }
-
-    header {
-      width: 100%;
-      padding: 20px;
-      background: rgba(0, 0, 0, 0.6);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    #scrollBar {
+      position: fixed; top: 0; left: 0; height: 5px;
+      background: var(--neon); width: 0%; z-index: 1000;
     }
-
-    .logo-title {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 22px;
-      color: #00ffff;
-    }
-
-    .menu-toggle {
-      font-size: 28px;
-      color: #00ffff;
-      background: none;
-      border: none;
-      cursor: pointer;
-      display: none;
-    }
-
-    nav {
-      display: flex;
-      gap: 25px;
-    }
-
-    nav a {
-      color: #00ffff;
-      text-decoration: none;
-      font-weight: 600;
-    }
-
-    nav a:hover { color: #fff; }
-
-    @media (max-width: 768px) {
-      .menu-toggle { display: block; }
-      nav {
-        position: absolute;
-        top: 70px;
-        right: 20px;
-        background: rgba(0, 0, 0, 0.9);
-        flex-direction: column;
-        padding: 20px;
-        border-radius: 12px;
-        display: none;
-      }
-      nav.open { display: flex; }
-    }
-
     section {
       min-height: 100vh;
       padding: 100px 20px 60px;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-    }
-
-    .container, .section-content {
-      background: rgba(0, 0, 0, 0.5);
-      backdrop-filter: blur(12px);
-      padding: 40px;
-      border-radius: 20px;
-      max-width: 800px;
       text-align: center;
     }
-
-    .logo {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      border: 4px solid #00ffff;
-      margin-bottom: 20px;
-    }
-
-    .name {
-      font-size: 28px;
-      color: #00ffff;
-      font-family: 'Orbitron', sans-serif;
-    }
-
-    .description, .welcome {
-      margin-top: 15px;
-      font-size: 18px;
-      color: #e0f7fa;
-    }
-
-    .buttons {
-      margin-top: 30px;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 15px;
-      justify-content: center;
-    }
-
-    .buttons a {
-      background: #00ffff;
-      color: #000;
-      padding: 12px 20px;
-      border-radius: 25px;
-      text-decoration: none;
-      font-weight: 600;
-      transition: 0.3s;
-    }
-
-    .buttons a:hover { background: #fff; }
-
     .section-title {
-      font-size: 28px;
-      color: #00ffff;
+      font-size: 32px;
+      color: var(--neon);
+      font-family: 'Orbitron', sans-serif;
+      text-shadow: 0 0 10px var(--neon);
       margin-bottom: 20px;
     }
-
-    .projects-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
+    .section-content {
+      background: var(--blur);
+      padding: 40px;
+      border-radius: 20px;
+      max-width: 900px;
+      box-shadow: 0 0 25px var(--neon);
     }
-
-    .project-card {
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid #00ffff30;
-      border-radius: 15px;
-      padding: 20px;
-      text-align: left;
-      transition: transform 0.3s ease;
-    }
-
-    .project-card:hover {
-      transform: scale(1.05);
-      background: rgba(0, 255, 255, 0.1);
-    }
-
-    .project-card h3 {
-      color: #00ffff;
-      margin-bottom: 10px;
-    }
-
-    .project-card p {
-      color: #e0f7fa;
-    }
-
-    form input, form textarea {
-      padding: 12px;
+    .buttons a, button, input, textarea {
+      font-family: inherit;
       border-radius: 10px;
       border: none;
-      font-size: 16px;
     }
-
-    form button {
-      background: #00ffff;
+    .theme-toggle {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background: var(--neon);
       color: #000;
-      padding: 12px;
-      border-radius: 10px;
-      border: none;
-      font-weight: bold;
+      padding: 10px 15px;
       cursor: pointer;
-      transition: 0.3s;
+      z-index: 1001;
+      border-radius: 8px;
     }
-
-    form button:hover { background: #fff; }
+    .skills-list, .timeline, .projects-grid, .buttons, .achievements-list, .leaderboard, .memes {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+    .skill, .timeline-event, .project-card, .achievement, .buttons a, .leaderboard-entry, .meme {
+      background: #0a0a0a;
+      border: 1px solid var(--neon);
+      padding: 15px;
+      border-radius: 12px;
+      box-shadow: 0 0 12px var(--neon);
+      transition: transform .3s;
+      color: var(--light);
+      text-decoration: none;
+      text-align: center;
+    }
+    .skill:hover, .timeline-event:hover, .project-card:hover, .achievement:hover, .buttons a:hover, .leaderboard-entry:hover, .meme:hover {
+      transform: scale(1.05);
+    }
+    .logo {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      border: 4px solid var(--neon);
+      box-shadow: 0 0 15px var(--neon);
+      margin-bottom: 20px;
+      animation: pulseRotate 6s infinite ease-in-out;
+    }
+    @keyframes pulseRotate {
+      0% {
+        transform: rotate(0deg) scale(1);
+        box-shadow: 0 0 15px var(--neon);
+      }
+      50% {
+        transform: rotate(180deg) scale(1.05);
+        box-shadow: 0 0 30px var(--neon);
+      }
+      100% {
+        transform: rotate(360deg) scale(1);
+        box-shadow: 0 0 15px var(--neon);
+      }
+    }
+    .clock {
+      font-size: 20px;
+      margin-top: 10px;
+    }
+    footer {
+      background: #0a0a0a;
+      padding: 40px 20px;
+      text-align: center;
+      border-top: 2px solid var(--neon);
+      box-shadow: 0 -2px 20px var(--neon);
+      margin-top: 60px;
+      animation: footerGlow 4s infinite alternate;
+    }
+    @keyframes footerGlow {
+      from {
+        box-shadow: 0 -2px 20px var(--neon);
+      }
+      to {
+        box-shadow: 0 -2px 40px var(--neon);
+      }
+    }
+    footer p {
+      margin: 10px 0;
+      font-size: 16px;
+      color: var(--light);
+    }
+    .footer-socials a {
+      color: var(--neon);
+      margin: 0 10px;
+      font-size: 24px;
+      transition: color 0.3s, transform 0.3s;
+    }
+    .footer-socials a:hover {
+      color: #fff;
+      transform: scale(1.2);
+    }
   </style>
 </head>
 <body>
-
-  <header>
-    <div class="logo-title">㳠米鸭</div>
-    <button class="menu-toggle" onclick="toggleMenu()"><i class="fas fa-ellipsis-v"></i></button>
-    <nav id="nav-menu">
-      <a href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
+  <div id="scrollBar"></div>
+  <div class="theme-toggle" onclick="toggleTheme()">Toggle Theme</div>
 
   <section id="home">
-    <div class="container">
-      <img class="logo" src="https://yt3.googleusercontent.com/cKZ5TVEe-yXfQ2CeqI5UoHTUGKTcKTg2g0GcKA01UXA9hLHQKjvEpt9mvwGwUHgj3TefugfpPfw=s160-c-k-c0x00ffffff-no-rj" alt="Logo" />
-      <div class="name">taimiyaxeditz</div>
-      <div class="description">I'm a coder with over 3 years of experience, now working as a full-stack developer.</div>
-      <div class="welcome">I'm passionate about coding, editing, and building across the digital universe. Let's innovate together!</div>
+    <div class="section-content">
+      <img src="https://yt3.googleusercontent.com/rgW6HKz1xBR3c5UOjbKnb_Nkj1ZROqmoLbI_yrMpoWmgy7hiNSR-0kC2ZxLZN853BjHcWyBhHAk=s160-c-k-c0x00ffffff-no-rj" alt="Logo" class="logo">
+      <h1 class="section-title">Welcome to Taimiyaxeditz</h1>
+      <p>Crafting the future with code and creativity.</p>
       <div class="buttons">
-        <a href="https://discord.com/user/1331632669880221708"><i class="fab fa-discord"></i> Discord</a>
-        <a href="https://youtube.com/@taimiyaxeditz?si=kwh2hmAV_XRRhXOf"><i class="fab fa-youtube"></i> YouTube</a>
-        <a href="https://github.com/Taimiya-Creator"><i class="fab fa-github"></i> GitHub</a>
-        <a href="https://discord.gg/CKT4AhYfBs"><i class="fab fa-discord"></i> Hexa Host</a>
+        <a href="https://discord.com/user/1331632669880221708" target="_blank"><i class="fab fa-discord"></i> Discord</a>
+        <a href="https://youtube.com/@taimiyaxeditz" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+        <a href="https://github.com/Taimiya-Creator" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+      </div>
+      <div class="clock" id="clock"></div>
+    </div>
+  </section>
+
+  <section id="skills">
+    <div class="section-content">
+      <h2 class="section-title">Skills</h2>
+      <div class="skills-list">
+        <div class="skill">HTML / CSS / JS</div>
+        <div class="skill">React / Vue</div>
+        <div class="skill">Node.js / Express</div>
+        <div class="skill">MongoDB / Firebase</div>
+        <div class="skill">Photoshop / After Effects</div>
+        <div class="skill">Git / GitHub / CI-CD</div>
+        <div class="skill">APIs / REST / GraphQL</div>
+        <div class="skill">Three.js / WebGL</div>
       </div>
     </div>
   </section>
 
-  <section id="about">
+  <section id="timeline">
     <div class="section-content">
-      <h2 class="section-title">About Me</h2>
-      <p>I'm a coder with over 3 years of experience, now working as a full-stack developer. Always exploring new technologies and pushing boundaries.</p>
-      <p>CEO of Hexa Host. I love building tools and digital experiences that push the web forward.</p>
+      <h2 class="section-title">My Journey</h2>
+      <div class="timeline">
+        <div class="timeline-event">2020: Started coding and editing journey</div>
+        <div class="timeline-event">2021: Built personal projects and explored APIs</div>
+        <div class="timeline-event">2022: Founded Hexa Host</div>
+        <div class="timeline-event">2022: Released Flex UI Kit, Anime API</div>
+        <div class="timeline-event">2022: Mastered full-stack, built SaaS tools</div>
+      </div>
+    </div>
+  </section>
+
+  <section id="achievements">
+    <div class="section-content">
+      <h2 class="section-title">Fake Achievements</h2>
+      <div class="achievements-list">
+        <div class="achievement">Awarded "Best Dev Under 20" by Imaginary Tech</div>
+        <div class="achievement">First to code a website on Mars (virtually)</div>
+        <div class="achievement">100K Stars on GitHub (in dreams)</div>
+        <div class="achievement">Built an AI that only writes memes</div>
+        <div class="achievement">Featured on the cover of Code Weekly (fan art edition)</div>
+      </div>
+    </div>
+  </section>
+
+  <section id="leaderboard">
+    <div class="section-content">
+      <h2 class="section-title">Global Leaderboard</h2>
+      <div class="leaderboard">
+        <div class="leaderboard-entry">#1 - Taimiyaxeditz: 99,999 XP</div>
+        <div class="leaderboard-entry">#2 - Elon Devskin: 88,888 XP</div>
+        <div class="leaderboard-entry">#3 - AI-9000: 77,777 XP</div>
+      </div>
+    </div>
+  </section>
+
+  <section id="memes">
+    <div class="section-content">
+      <h2 class="section-title">AI Meme Generator (Random)</h2>
+      <div class="memes">
+        <div class="meme">"When the code works on first try... suspicious."</div>
+        <div class="meme">"404: Motivation Not Found"</div>
+        <div class="meme">"I write bugs faster than I fix them."</div>
+      </div>
     </div>
   </section>
 
@@ -221,22 +239,11 @@
     <div class="section-content">
       <h2 class="section-title">Projects</h2>
       <div class="projects-grid">
-        <div class="project-card">
-          <h3>Flex UI Kit</h3>
-          <p>A responsive UI component kit to quickly build beautiful web apps.</p>
-        </div>
-        <div class="project-card">
-          <h3>Hexa Host Panel</h3>
-          <p>A custom web hosting dashboard built from scratch using Node.js and React.</p>
-        </div>
-        <div class="project-card">
-          <h3>Anime Stream API</h3>
-          <p>Backend API to fetch anime data with streaming support, used in a custom player.</p>
-        </div>
-        <div class="project-card">
-          <h3>Glitch Anim Effects</h3>
-          <p>Micro-library that adds neon glitch transitions to text and buttons.</p>
-        </div>
+        <div class="project-card"><h3>Flex UI Kit</h3><p>A responsive UI kit for modern web development.</p></div>
+        <div class="project-card"><h3>Hexa Host Panel</h3><p>Custom hosting panel built for scalability.</p></div>
+        <div class="project-card"><h3>Anime Stream API</h3><p>Metadata & anime streaming-ready API.</p></div>
+        <div class="project-card"><h3>Glitch Anim Effects</h3><p>Neon glitch animation library.</p></div>
+        <div class="project-card"><h3>CodeVerse Terminal</h3><p>CLI-style web terminal experience.</p></div>
       </div>
     </div>
   </section>
@@ -244,23 +251,51 @@
   <section id="contact">
     <div class="section-content">
       <h2 class="section-title">Contact Me</h2>
-      <form action="mailto:your-email@example.com" method="POST" enctype="text/plain" style="margin-top: 20px;">
-        <div style="display: flex; flex-direction: column; gap: 15px; max-width: 500px; margin: auto;">
-          <input type="text" name="name" placeholder="Your Name" required />
-          <input type="email" name="email" placeholder="Your Email" required />
-          <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-          <button type="submit">Send Message</button>
-        </div>
+      <form action="mailto:taimiyamajd0@gmail.com" method="POST" enctype="text/plain">
+        <input type="text" name="name" placeholder="Your Name" required />
+        <input type="email" name="email" placeholder="Your Email" required />
+        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+        <button type="submit">Send</button>
       </form>
     </div>
   </section>
 
-  <script>
-    function toggleMenu() {
-      const menu = document.getElementById("nav-menu");
-      menu.classList.toggle("open");
-    }
-  </script>
+  <footer>
+    <p>&copy; 2022 Taimiyaxeditz. All rights reserved.</p>
+    <div class="footer-socials">
+      <a href="https://youtube.com/@taimiyaxeditz" target="_blank"><i class="fab fa-youtube"></i></a>
+      <a href="https://github.com/Taimiya-Creator" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://discord.com/user/1331632669880221708" target="_blank"><i class="fab fa-discord"></i></a>
+    </div>
+  </footer>
 
+  <script>
+    window.onscroll = function () {
+      const scrollBar = document.getElementById("scrollBar");
+      const winScroll = document.body.scrollTop || document.documentElement.scrollTop;
+      const height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
+      scrollBar.style.width = (winScroll / height) * 100 + "%";
+    };
+
+    function toggleTheme() {
+      const html = document.documentElement;
+      const current = html.getAttribute("data-theme");
+      html.setAttribute("data-theme", current === "light" ? "dark" : "light");
+      localStorage.setItem("theme", html.getAttribute("data-theme"));
+    }
+
+    (function () {
+      const saved = localStorage.getItem("theme") || "dark";
+      document.documentElement.setAttribute("data-theme", saved);
+    })();
+
+    function updateClock() {
+      const now = new Date();
+      const clock = document.getElementById("clock");
+      clock.textContent = now.toLocaleTimeString();
+    }
+    setInterval(updateClock, 1000);
+    updateClock();
+  </script>
 </body>
 </html>
