--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 
   <section id="home">
     <div class="section-content">
-      <img src="https://yt3.googleusercontent.com/1HgoG2h15gEBQXlIkjzx2UFFTG2Z87ozl1JN_iDjwUwU09DBGMA1CvsWpu0cFG5RANZ5QUxE5A=s160-c-k-c0x00ffffff-no-rj" alt="Logo" class="logo">
+      <img src="https://cdn.discordapp.com/attachments/1372526739598737448/1373248328044777562/02bf1f671c543a9954261607ff7fdbdf.jpg?ex=6829b8ab&is=6828672b&hm=59b5ffb8a96cc5eef7c10a3684a1d934b1b3cb6da7de28ba5453fbf47ee11151&" alt="Logo" class="logo">
       <h1 class="section-title">Welcome to Zenova<br>(taimiyaxeditz) </h1>
       <p>Crafting the future with code and creativity.</p>
       <div class="buttons">
